# myrustutils

./: .gitignore  Cargo.toml  readme.md
examples/: curl-from-reqwest.rs  curl_from_reqwest.rs  example.md  markdown-headers.rs
src/: common.rs  curl_from_reqwest.rs  lib.rs  markdown_headers.rs
tests/: curl_from_reqwest.rs
