[package]
name = "myrustutils"
version = "0.2.0"
edition = "2021"

[[example]]
name = "curl-from-reqwest"
required-features = ["curl-from-reqwest"]

[features]
curl-from-reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "multipart"], optional = true}
markdown = "1.0.0-alpha.12"
anyhow = "1.0.75"
regex = "1.10.2"
base64 = "0.21.5"
colored = "2.0.4"

[dev-dependencies]
tempfile = "3.8.1"
