[package]
name = "myrustutils"
version = "0.3.0"
edition = "2021"

[[example]]
name = "curl-from-reqwest"
required-features = ["curl-from-reqwest"]

[features]
curl-from-reqwest = ["dep:reqwest"]

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "multipart"], optional = true}
markdown = "1.0.0-alpha.22"
anyhow = "1.0.95"
regex = "1.11.1"
base64 = "0.22.1"
colored = "3.0.0"

[dev-dependencies]
tempfile = "3.17.1"
